--- a/index1.html
+++ b/index1.html
@@ -9,19 +9,17 @@
 </head>
 <body>
   <div class="header">
-    <div class="logo"><img src='photos/logo.jpg'></div>
-    <div class='header-text'>Mickey's Bar and Grill</div>
+    <img src="photos/logo.png" />
   </div>
 
   <div class="nav">
-    <a><div>MENU</div></a>
+    <a><div class="selected">MENU</div></a>
     <a><div>ABOUT</div></a>
     <a><div>GALLERY</div></a>
     <a><div>CONTACT</div></a>
     
   </div>
 
-  <div class='test'><img src='photos/logo.png' /></div>
 
 
 
