Commit before adding JS file

--- a/index1.html
+++ b/index1.html
@@ -19,11 +19,124 @@
     <a><div>CONTACT</div></a>
     
   </div>
+  <div class="container-1">
+  <div class="specials">
+    <div class="burger"><img src='photos/burger.png' /></div>
+    <div class="burger"><img src='photos/burger.png' /></div>
+    <div class="burger"><img src='photos/burger.png' /></div>
+  </div>
+
+  <div class="specials">
+    <div class="marg"><img src='photos/marg.png' /></div>
+    <div class="marg"><img src='photos/marg.png' /></div>
+    <div class="marg"><img src='photos/marg.png' /></div>
+  </div>
+
+  </div>
+
+  <div class='menu-nav'>
+    <button class="b-one menu-button">Apps</button>
+    <button class="b-two menu-button">Burgers</button>
+    <button class="b-three menu-button">Baskets</button>
+    <button class="b-four menu-button">Entree</button>
+    <button class="b-five menu-button">Soup & Salad</button>
+  </div>
+  
+  <div class="rec rec-one">
+      <div><img src='photos/app1.png' /></div>
+      <div><img src='photos/app2.png' /></div>
+      <div><img src='photos/app3.png' /></div>
+  </div>
+
+  <div class="rec rec-two">
+    <div></div>
+    <div></div>
+    <div></div>
+</div>
+
+<div class="rec rec-three">
+  <div></div>
+  <div></div>
+  <div></div>
+</div>
+
+<div class="rec rec-four">
+  <div></div>
+  <div></div>
+  <div></div>
+</div>
+
+<div class="rec rec-five">
+  <div></div>
+  <div></div>
+  <div></div>
+</div>
 
 
+  <div class="menu-containers one">
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
 
+  </div>
 
+  <div class="menu-containers two">
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
 
+  </div>
+
+  <div class="menu-containers three">
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+
+  </div>
+
+  <div class="menu-containers four">
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+
+  </div>
+
+  <div class="menu-containers five">
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+
+  </div>
 
 </body>
 </html>
